@@ -8,6 +8,7 @@ Version 1.4.12 - SVN
     book during message composition.
   - Fixed issue with adding attachments in PHP 4.x environments (#1805471).
   - Backport size setting on "newmail" popup window.
+  - Added a "short_open_tag" configuration test.
 
 Version 1.4.11 - 29 September 2007
 ----------------------------------
